# talk2sheet

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.ja.md  README.md  README.zh-CN.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py  observability.py  schemas.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: files.py  health.py  spreadsheet.py
apps/api/app/services/spreadsheet/: __init__.py  openai_compatible.py  service.py
apps/api/app/services/storage/: __init__.py  base.py  (+2 more)
apps/api/scripts/: check_contract_artifacts.py  eval_batch_perf_baseline.py  eval_intent_cases.py  eval_join_beta_cases.py  export_openapi.py
apps/api/tests/: test_config_join_beta.py  test_health.py  test_observability_http.py  test_spreadsheet_analysis.py  test_spreadsheet_answer_generator.py  test_spreadsheet_batch_analysis.py  test_spreadsheet_capability_guard.py  test_spreadsheet_conversation.py  test_spreadsheet_header_detection.py  test_spreadsheet_join_executor.py  test_spreadsheet_join_preflight.py  test_spreadsheet_package_boundaries.py  test_spreadsheet_planner_modules.py  test_spreadsheet_regression.py  test_spreadsheet_replay_cases.py  test_spreadsheet_sheet_metadata.py  test_spreadsheet_sheet_router.py  test_spreadsheet_transform.py  test_storage.py
apps/api/tests/fixtures/: analysis_cases.json  analysis_parity_cases.json  intent_regression_cases.v0.2.0.json  intent_regression_cases.v0.3.0.json  join_beta_cases.v0.3.3.json
apps/api/tests/planning/: test_intent_regression.py
(+164 files in other folders)
