[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talk2sheet-api"
version = "0.2.0"
description = "FastAPI backend for conversational spreadsheet analytics."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.109,<1",
  "uvicorn[standard]>=0.27,<1",
  "pandas>=2.2,<3",
  "openpyxl>=3.1,<4",
  "xlrd>=2.0,<3",
  "python-multipart>=0.0.9,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.0,<3",
  "openai>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.28,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
